[package]
name = "wrapper"
version = "0.1.1"
authors = ["tjan <earltjan@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
libc = "0.2.58" # same with filecoin-project/filecoin-ffi
storage-proofs = "4.0.1"
serde = "1.0.115"
serde_json = "1.0.57"
rand = "0.7.3"
chrono = "0.4.13"
memmap = "0.7.0"
merkletree = "0.21.0"
thiserror = "1.0.20"
anyhow = "1.0.32"

[build-dependencies]
cbindgen = "0.14.3"
